fix #2064 - fix overflow project list in the projects home

--- a/app/styles/modules/home-projects-list.scss
+++ b/app/styles/modules/home-projects-list.scss
@@ -159,7 +159,6 @@
     .create-project-button-wrapper {
         display: flex;
         flex-shrink: 0;
-        margin-top: 1rem;
         .create-project-button {
             flex-grow: 8;
             margin-right: .2rem;
